--- a/src/fragments/PopulationPerSex.css
+++ b/src/fragments/PopulationPerSex.css
@@ -1,4 +1,10 @@
 .population-per-sex {
-  display: flex;
-  column-gap: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 2rem;
+  margin: 2rem;
+}
+
+.population-per-sex > div {
+  box-shadow: 0 0 0 rgba(255, 255, 255, 0.16), 0 3px 6px rgba(255, 255, 255, 0.23);
 }
