Update top navigation bar design

--- a/src/layouts/Tabs.css
+++ b/src/layouts/Tabs.css
@@ -3,27 +3,49 @@
 }
 
 .tabs-header {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   position: fixed;
   top: 0;
+  padding-right: 3rem;
   width: 100%;
   z-index: 10;
   background-color: hsl(192, 20%, 10%);
+  border-bottom: 1px solid hsla(197, 10%, 50%, 1);
+}
+
+.tabs-title {
+  align-self: center;
+  padding-left: 1rem;
+  color: #20a8df;
+  font-weight: 600;
+}
+
+.tabs-title::first-letter {
+  color: #df9c20;
+}
+
+.tabs-system {
+  align-self: center;
+  justify-self: center;
+  color: #df9c20;
 }
 
 .tabs-content {
+  justify-self: end;
   display: flex;
   flex-direction: row;
   padding-left: 1rem;
   padding-right: 1rem;
-  border-bottom: 1px solid hsla(197, 10%, 50%, 1);
 }
 
 .tabs-item {
   display: block;
-  padding: 0.4rem 1.5rem 0.2rem 1.5rem;
+  padding: 0.4rem 1.5rem 0.3rem 1.5rem;
   color: #ffffff;
   text-decoration: none;
   transition: background-color 300ms ease;
+  border: 1px solid hsla(197, 10%, 50%, 1);
 }
 
 .tabs-item:hover,
@@ -34,5 +56,5 @@
 
 .tabs-item.active {
   background-color: hsla(197, 75%, 50%, 0.3);
-  border-bottom: 0.2rem solid #df9c20;
+  border-bottom: 0.23rem solid #df9c20;
 }
