--- a/src/index.css
+++ b/src/index.css
@@ -95,3 +95,22 @@ body {
   width: 1rem;
   margin: 0 auto 0 auto;
 }
+
+body {
+  background: linear-gradient(-45deg, hsl(136, 82%, 10%), hsl(226, 78%, 10%), hsl(196, 72%, 10%), hsl(166, 72%, 10%));
+  background-size: 1000% 1000%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
