Update information form design

--- a/src/components/SectionHeader.css
+++ b/src/components/SectionHeader.css
@@ -1,11 +1,14 @@
 .section-header {
   display: grid;
   padding: 2rem 2rem 0.75rem 2rem;
+  background-color: hsl(195, 11%, 10%, 0.5);
 }
 
 .section-header-big-title {
-  font-size: 2rem;
+  font-size: 1.5rem;
   align-self: center;
+  text-decoration: underline;
+  text-decoration-color: #df9c20;
 }
 
 .section-header-title {
