--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,5 +1,4 @@
 .form {
-  border: 1px solid white;
+  border: 1rem solid hsla(0, 0%, 100%, 0.2);
   margin: 3rem;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
