--- a/src/components/FormRow.css
+++ b/src/components/FormRow.css
@@ -3,6 +3,7 @@
   gap: 1rem;
   flex-wrap: wrap;
   padding: 0.5rem 3rem 1rem 3rem;
+  background-color: hsla(0, 0%, 100%, 0.1);
 }
 
 .form-row-loading {
