--- a/src/components/SectionBody.css
+++ b/src/components/SectionBody.css
@@ -3,8 +3,8 @@
   column-gap: 2rem;
   row-gap: 1rem;
   flex-wrap: wrap;
-  padding: 0.5rem 3rem 1rem 3rem;
-  background-color: hsl(195, 11%, 15%);
+  padding: 0.5rem 4rem 1rem 4rem;
+  background-color: hsla(0, 0%, 100%, 0.1);
 }
 
 .section-body-loader {
