--- a/src/components/SectionFooter.css
+++ b/src/components/SectionFooter.css
@@ -2,7 +2,7 @@
   display: grid;
   justify-content: end;
   padding: 1rem 2rem 2rem 2rem;
-  background-color: hsla(197, 10%, 15%, 1);
+  background-color: hsl(195, 11%, 10%, 0.5);
   font-style: italic;
   font-size: 0.9rem;
   transition: all 300ms ease;
