--- a/src/components/TableFooter.css
+++ b/src/components/TableFooter.css
@@ -5,7 +5,7 @@
   grid-template-columns: auto 1fr auto auto auto;
   width: 100%;
   height: 100%;
-  background-color: hsl(195, 11%, 15%, 0.9);
+  background-color: hsl(195, 11%, 15%);
 }
 
 .table-footer-desc {
