Prepare for demo

--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -7,7 +7,8 @@
 .table-custom thead {
   position: sticky;
   top: 2.3rem;
-  background-color: hsl(195, 11%, 15%);
+  background-color: #171b1c;
+  box-shadow: 0 0.1rem #df9c20;
 }
 
 .table-custom tr {
