--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
 }
 
 .map-container {
-  height: calc(100vh - 11rem);
+  height: calc(100vh - 4.6rem);
   width: 100%;
 }
 
@@ -100,6 +100,8 @@ body {
   margin: 0 auto 0 auto;
 }
 
+/* BODY GRADIENT */
+
 body {
   background: linear-gradient(-45deg, hsl(136, 82%, 8%), hsl(226, 78%, 8%), hsl(196, 72%, 8%), hsl(166, 72%, 8%));
   background-size: 1000% 1000%;
@@ -117,4 +119,10 @@ body {
   100% {
     background-position: 0% 50%;
   }
+}
+
+/* REMOVE LINK DECORATION */
+
+a:link {
+  text-decoration: none;
 }
