--- a/src/components/TableFooter.css
+++ b/src/components/TableFooter.css
@@ -5,7 +5,8 @@
   grid-template-columns: auto 1fr auto auto auto;
   width: 100%;
   height: 100%;
-  background-color: hsl(195, 11%, 15%);
+  background-color: #171b1c;
+  border-top: 0.1rem solid #df9c20;
 }
 
 .table-footer-desc {
