--- a/src/components/TableToolbar.css
+++ b/src/components/TableToolbar.css
@@ -1,8 +1,15 @@
 .table-toolbar {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto;
   width: 100%;
+  background-color: hsl(192, 10%, 10%, 0.5);
 }
 
-.table-toolbar .input {
+.table-toolbar div .input {
   width: 100%;
+  height: 100%;
+}
+
+.table-toolbar-children {
+  display: flex;
 }
