--- a/src/components/PanelLink.css
+++ b/src/components/PanelLink.css
@@ -22,6 +22,7 @@
 .panel-link.active {
   background-color: rgba(32, 169, 223, 0.3);
   border-left: 0.2rem solid #20a9df;
+  color: #df9c20;
 }
 
 .panel-header-title .panel-link {
