Add evacuation center modules

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,11 @@ body {
   width: 100%;
 }
 
+.map-container-evacuation-center {
+  height: calc(100vh - 7rem);
+  width: 100%;
+}
+
 /* LEGENDS FOR DASHBOARD */
 
 .box-red {
